--- a/example-app/app/src/main/res/values/strings.xml
+++ b/example-app/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="getting_token">Getting token...</string>
     <string name="error">Error</string>
     <string name="failed_to_get_token">Failed to get token.</string>
-    <string name="cancelled">Cancelled</string>
+    <string name="canceled">Canceled</string>
     <string name="success">Success</string>
     <string name="token_format">Token: %1$s</string>
     <string name="enrol_gpa">Enrol with Genuine Presence Assurance</string>
